adding new tests